collapsed/edited facets:   app/controllers/search.js 	upped max zoom:   app/controllers/search/map.js 	edited logo:   app/templates/application.hbs
	collapsed/edited facets
	upped maxZoom
	edited logo

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -10,7 +10,7 @@
           <img src="/assets/bcpdl.png">
         </div>
         <div id="title-text-container">
-          <h1>BCPDL-ODW</h1>
+          <h1>BCDL-ODW</h1>
           <div class="subtitle">{{t "site.subtitle"}}</div>
           <span class="label label-primary">Prototype</span>
         </div>
