collapsed/edited facets: app/templates/application.hbs 	changed ribbon url: app/templates/search.hbs 	modified:   package.json

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -6,11 +6,10 @@
       {{!link allows you to reset the query params, which is useful because they're normally sticky in Ember}}
       {{#link-to "search" (query-params page=1 per_page=20 and='' text='' geo_bbox='') current-when="search"}}
         <div id="title-img-container">
-          <img src="/assets/odw.png">
           <img src="/assets/bcpdl.png">
         </div>
         <div id="title-text-container">
-          <h1>BCDL-ODW</h1>
+          <h1>BCDL</h1>
           <div class="subtitle">{{t "site.subtitle"}}</div>
           <span class="label label-primary">Prototype</span>
         </div>
