added min-height to css to prevent display issue with small icons

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -38,6 +38,8 @@ $main-width: 1000px;
 //HEADER
 
 #site-title {
+  display: flex;
+  min-height: 75px;
   > * {
     display: flex;
     align-items: center;
