--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,6 +1,7 @@
 //redefine bootstrap defaults
 $text-muted: lightgray;
 $screen-xl: 1400px;
+$brand-primary: #0268a5;
 
 @import "ember-bootstrap/bootstrap";
 
@@ -9,7 +10,6 @@ $margin-standard: 10px;
 $margin-wide: (2 * $margin-standard);
 $margin-nav-height: 40px; //equal in height to the nav tabs, good for top of aside
 $indent-standard: 20px;
-$image-width-title: 50px;
 $image-width: 150px;
 $image-placeholder: '/assets/thumb_placeholder.gif';
 $aside-width: 260px;
@@ -45,16 +45,16 @@ $main-width: 1000px;
     align-items: center;
     justify-content: flex-end;
     text-decoration: none;
-    #title-img-container {
-      max-width: $image-width-title;
-      margin-left:$margin-standard;
-      img {width: 100%;}
-    }
     #title-text-container {
       flex-grow: 1;
+      > img {
+        width: ($aside-width - (2*$margin-standard));
+        margin-left: ($margin-standard - 2px);
+      }
       > * {
         font-weight: bold;
         margin: 0;
+        margin-left: $margin-standard;
       }
       h1 {
         font-size: 32px;
