--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,13 +5,11 @@
     <section id="site-title">
       {{!link allows you to reset the query params, which is useful because they're normally sticky in Ember}}
       {{#link-to "search" (query-params page=1 per_page=20 and='' text='' geo_bbox='') current-when="search"}}
-        <div id="title-img-container">
-          <img src="/assets/bcpdl.png">
-        </div>
         <div id="title-text-container">
-          <h1>BCDL</h1>
-          <div class="subtitle">{{t "site.subtitle"}}</div>
-          <span class="label label-primary">Prototype</span>
+          <img src="/assets/bcpdl.png">
+          <h1 class="sr-only">BCDL</h1>
+          <div class="subtitle">{{t "site.subtitle"}} <span class="label label-primary">Prototype</span></div>
+
         </div>
       {{/link-to}}
     </section>
