modified:   app/controllers/search.js 	modified:   app/styles/app.scss 	modified:   app/templates/application.hbs 	modified:   app/templates/components/search-facets.hbs

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,8 +8,9 @@
         <div id="title-text-container">
           <img src="/assets/bcpdl.png">
           <h1 class="sr-only">BCDL</h1>
-          <div class="subtitle">{{t "site.subtitle"}} <span class="label label-primary">Prototype</span></div>
-
+          <div class="subtitle">{{t "site.subtitle"}} 
+          <span class="label label-primary">Prototype</span></div>
+          <div class="emptyBlock"></div> 
         </div>
       {{/link-to}}
     </section>
