--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -58,10 +58,16 @@ $main-width: 1000px;
         margin-left: $margin-standard;
       }
       h1 {
+        margin-top: 15px;
         font-size: 32px;
         line-height: 70%;
       }
+      .emptyBlock {
+        margin-top: 30px;
+        margin-bottom: 30px;
+      }
       .subtitle {
+        margin-top: 3px;
         font-size: 19px;
         line-height: 90%;
       }
