--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -5,11 +5,11 @@
     <section id="site-title">
       {{!link allows you to reset the query params, which is useful because they're normally sticky in Ember}}
       {{#link-to "search" (query-params page=1 per_page=20 and='' text='' geo_bbox='') current-when="search"}}
+        <div id="title-img-container">
+          <img src="/assets/newbc.png" style="border: #d3d3d3 .85px solid; border-radius: 4px;" >
+
+        </div>
         <div id="title-text-container">
-          <img src="/assets/bcpdl.png">
-          <h1 class="sr-only">BCDL</h1>
-          <div class="subtitle">{{t "site.subtitle"}} 
-          <span class="label label-primary">Prototype</span></div>
           <div class="emptyBlock"></div> 
         </div>
       {{/link-to}}
